--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -13,18 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      - name: Install dependencies
-        run: |
-          npm install
-
       - name: Install Firebase Tools
         run: |
-          npm install -g firebase-tools
+          curl -sL https://firebase.tools | bash
 
       - name: Authenticate with Firebase
         run: |
@@ -32,7 +23,7 @@ jobs:
 
       - name: Build the app
         run: |
-          ./gradlew assembleRelease  
+          ./gradlew assembleRelease 
 
       - name: Upload to Firebase App Distribution
         run: |
