--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ captures
 **/xcshareddata/WorkspaceSettings.xcsettings
 composeApp/src/google-services.json
 myapp.keystore
+composeApp/google-services.json
