--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,21 +27,11 @@ jobs:
           KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
         run: echo $KEYSTORE_BASE64 | base64 -d > myapp.keystore
 
-      # Создаем файл учетных данных Firebase (service-account-key.json)
+      # Создаем файл учетных данных Firebase
       - name: Create Firebase Service Account File
         env:
           FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-        run: echo "$FIREBASE_SERVICE_ACCOUNT" > composeApp/service-account-key.json
-
-      # Создаем google-services.json
-      - name: Create google-services.json
-        env:
-          GOOGLE_SERVICES_JSON_BASE64: ${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}
-        run: echo $GOOGLE_SERVICES_JSON_BASE64 | base64 -d > composeApp/google-services.json
-
-      # Проверяем, что файл создан (для отладки)
-      - name: Verify google-services.json Creation
-        run: ls -la composeApp/google-services.json || echo "google-services.json not found!"
+        run: echo "$FIREBASE_SERVICE_ACCOUNT" > service-account-key.json
 
       # Даем права на выполнение gradlew
       - name: Grant execute permission for gradlew
