--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,21 +3,19 @@ name: Build and Deploy to Firebase App Distribution
 on:
   push:
     branches:
-      - main # Запускается при пуше в ветку main
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Устанавливаем JDK
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
 
-      # Клонируем репозиторий
       - name: Checkout code
         uses: actions/checkout@v3
 
@@ -32,8 +30,6 @@ jobs:
         env:
           GOOGLE_SERVICES_JSON_BASE64: ${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}
         run: echo "$GOOGLE_SERVICES_JSON_BASE64" | base64 -d > composeApp/google-services.json
-
-
 
       # Создаем файл учетных данных Firebase
       - name: Create Firebase Service Account File
